Fix footer styles on mobile

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,12 +9,13 @@
     width: 100%;
     height: 130px;
     justify-content: flex-end;
+    margin: 30px 0 10px 0;
 
     @include tablet {
         flex-direction: row;
         height: 70px;
         justify-content:flex-end;
-        padding: 0;
+        margin: 0;
     }
 
     &__info {
@@ -23,7 +24,7 @@
         color: $colorWhite;
         font-family: $fontRoboto;
         font-size: 12px;
-        padding-bottom: 15px;
+        margin: 5px 0;
         &--motto {
             color: $colorMotto;
             font-size: 10px;
@@ -47,10 +48,13 @@
         order: -1;
         width: 90px;
         border-radius: 80px;
-        position: relative;
+        position: absolute;
         padding-bottom: 5px;
+        margin: -55px 0 0 0;
 
         @include tablet {
+            position: relative;
+            margin: 0;
             order: 0;
         }
     }
